@@ -1,3 +1,12 @@
+2021-05-22  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* libpoke/pvm.h (pvm_make_string_nodup): New function declaration.
+	* libpoke/pvm-val.c (pvm_make_string_nodup): New function definition.
+	* libpoke/pvm.jitter: Do not include `xalloc.h`.
+	(muls): Use `pvm_alloc` instead of `xmalloc`.
+	* etc/poke.rec (The `muls' instruction in pvm.jitter calls xmalloc):
+	Remove as done.
+
 2021-05-21  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* AUTHORS: Change my email address to gnu account.
